# seevie-pri

./: .gitignore  LICENSE  README.md  pyproject.toml
src/seevie_pri/: __init__.py  cli.py  context.py  dashboard.py  db.py  pipeline.py  purl.py  server.py  version.py
src/seevie_pri/stages/: match.py  output.py  parse.py  rank.py  score.py
src/seevie_pri/templates/: architecture.html  base.html  findings.html  overview.html  service_detail.html  services.html  upload.html
tests/: test_cli.py  test_cli_indexed.py  test_dashboard.py  test_db.py  test_match.py  test_output.py  test_parse.py  test_pipeline.py  test_pipeline_ecosystems.py  test_rank.py  test_score.py  test_server.py
tests/fixtures/: cyclonedx_sample.json  cyclonedx_sample.xml  go_cyclonedx.json  npm_cyclonedx.json  offline_cve_data.json  pypi_cyclonedx.json  spdx_sample.json  spdx_sample_full.json
