[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seevie-pri"
version = "0.1.0"
description = "Vulnerability triage engine — mathematical risk prioritization for CVEs"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "httpx>=0.27",
    "rich>=13.0",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.18",
]

[project.scripts]
seevie-pri = "seevie_pri.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
